# Shiva

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  brain.py  pyproject.toml  requirements.txt  run.bat  run.py  setup_device.py
.omnimemory/: graph.db-shm  graph.db-wal
amygdala/: __init__.py  affective_forecast.py  arousal_modulator.py  emotional_core.py  emotional_memory.py  fear_assessment.py  habituation.py
brainstem/: __init__.py  circadian.py  cryostasis.py  device.py  forgetting_prevention.py  gradient_clipper.py  health_monitor.py  online_trainer.py  running_stats.py  scheduler.py
cerebellum/: __init__.py  action_smoother.py  emotional_contagion.py  skill_library.py  swarm_coordinator.py
cerebrum/: __init__.py  attention_query.py  causal_engine.py  chip_policy.py  concept_grounding.py  goal_generator.py  goal_stack.py  inner_speech.py  meta_cognition.py  narrative_self.py  personality.py  planner.py  reasoning.py  self_consistency.py  theory_of_mind.py  working_memory.py  world_model.py
core/: .#interfaces.py  chip_policy.py  device.py  emotional_core.py  episodic_memory.py  interfaces.py  latent-alignment.py  latent_alignment.py  merge_strategies.py  online_trainer.py  running_stats.py  shiva_policy.py  transformer-architecture.py  transformer_architecture.py
demo/: __init__.py  app.py
hippocampus/: __init__.py  active_dreaming.py  boundary_detector.py  dream_cycle.py  episodic_memory.py  episodic_recall.py  memory_consolidation.py  spatial_map.py  temporal_abstraction.py
hypothalamus/: __init__.py  curiosity_drive.py  drive_arbitrator.py  energy_manager.py  entropy_temperature.py  homeostasis.py
interfaces/: __init__.py  base.py  plugins.py  signals.py
locomotion/: ModelMovementAndLocomotion.py  __init__.py
parasite/: ModelWeightParasiticExtraction.py  __init__.py
scripts/: e2e_brain_test.py  e2e_full_chip_test.py  example_granite_integration.py  test_feature_contagion_dreaming.py  test_feature_episodic_recall.py  test_feature_goal_stack.py  test_feature_habit_boundary.py  (+5 more)
(+17 files in other folders)
